DocuSign For Salesforce/objects/DocuSign_Status__c.object
<CustomObject>
    <description>DocuSign Status is the foundation Custom Object for integration of DocuSign and Salesforce.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>R00N80000002vw3fEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>R00N80000002eb1GEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Age__c</fullName>
        <formula>NOW() - Completed_Date_Time__c</formula>
        <label>Completed Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>DocuSign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>R00N80000002vvynEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete__c</fullName>
        <formula>(NOW() -  Sent_Date_Time__c ) - (NOW() - Completed_Date_Time__c)</formula>
        <label>Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined_Date_Time__c</fullName>
        <label>Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <label>Declined Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Envelope_ID__c</fullName>
        <label>DocuSign Envelope ID</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Link__c</fullName>
        <label>Envelope Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Envelope_Status__c</fullName>
        <label>Envelope Status</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete__c</fullName>
        <formula>Minutes_to_Complete__c /60</formula>
        <label>Hours to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hrs_Sent_to_Sign__c</fullName>
        <formula>IF( Envelope_Status__c  = &quot;Voided&quot;,  0,  IF(Envelope_Status__c  = &quot;Declined&quot;,  0,   IF(Envelope_Status__c  = &quot;Sent&quot;,  Sent_Age__c * 24,  Hours_to_Complete__c ) ) )</formula>
        <label>Hours Sent to Sign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>DocuSign_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minutes_to_Complete__c</fullName>
        <formula>Days_to_Complete__c * 1440</formula>
        <label>Minutes to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Completed__c</fullName>
        <formula>IF( Envelope_Status__c = &quot;Completed&quot;, 1, null)</formula>
        <label>Number Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>R00N80000002fD9vEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sender_Email__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <label>Sender</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Age__c</fullName>
        <formula>NOW() -  Sent_Date_Time__c</formula>
        <label>Sent Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_Date_Time__c</fullName>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Complete__c</fullName>
        <formula>IF( Envelope_Status__c  = &quot;Voided&quot;, &quot;&quot;,  IF(Envelope_Status__c  = &quot;Declined&quot;,  &quot;&quot;,   IF(Envelope_Status__c  = &quot;Sent&quot;,  &quot;&quot;, TEXT( 
ROUND( 
( Completed_Date_Time__c  -  Sent_Date_Time__c ) - 
MOD(Completed_Date_Time__c  - Sent_Date_Time__c,1) 
,0) 
) 
&amp;&quot; day(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(Completed_Date_Time__c - Sent_Date_Time__c,1)*24 - 
MOD(MOD(Completed_Date_Time__c - Sent_Date_Time__c,1)*24,1) 
,0) 
) 
&amp;&quot; hour(s), &quot;&amp; 
TEXT( 
ROUND( 
MOD(MOD(Completed_Date_Time__c - Sent_Date_Time__c,1)*24,1) 
*60 
,0) 
)&amp;&quot; minute(s)&quot;) ) )</formula>
        <label>Time to Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewed_Date_Time__c</fullName>
        <label>Last Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Voided_Date_Time__c</fullName>
        <label>Voided</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Voided_Reason__c</fullName>
        <label>Voided Reason</label>
        <type>TextArea</type>
    </fields>
    <label>DocuSign Status</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>DocuSign_Envelope_ID__c</columns>
        <columns>Sent_Date_Time__c</columns>
        <columns>Envelope_Status__c</columns>
        <columns>Company__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Case__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Completed_Envelopes</fullName>
        <columns>NAME</columns>
        <columns>Sender__c</columns>
        <columns>Subject__c</columns>
        <columns>Sent_Date_Time__c</columns>
        <columns>Completed_Date_Time__c</columns>
        <columns>Hours_to_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Envelope_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed Envelopes</label>
    </listViews>
    <listViews>
        <fullName>All_Envelopes</fullName>
        <columns>NAME</columns>
        <columns>Sender__c</columns>
        <columns>Subject__c</columns>
        <columns>Envelope_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Sent_Date_Time__c</columns>
        <columns>Viewed_Date_Time__c</columns>
        <columns>Completed_Date_Time__c</columns>
        <columns>Hrs_Sent_to_Sign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Envelopes</label>
    </listViews>
    <nameField>
        <displayFormat>DSX-{0000000}</displayFormat>
        <label>Envelope#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>